Mon Aug  7 13:59:12 2000  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* regex.c (re_match): check for stack depth was needed.

Sat Aug  5 16:43:43 2000  WATANABE Hirofumi  <eban@os.rim.or.jp>

	* lib/ftools.rb (compare, safe_unlink, chmod): avoid warnings.

	* lib/ftools.rb (move): typo. not `tpath', but `to'.

Wed Aug  2 18:27:47 2000  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* eval.c (rb_continuation_call): prohibit Continuation#call across
	  threads.

Sat Jul 29 23:42:04 2000  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* dir.c (dir_each): should check whether dir is closed during the
	  block execution. (ruby-bugs:#PR47)

Sat Jul 29 21:57:30 2000  WATANABE Hirofumi  <eban@os.rim.or.jp>

	* ruby.c (rubylib_mangle): provide another buffer for the result.

Wed Jul 26 15:07:00 2000  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* eval.c (eval): disable interrupts and thread context switching
	  during compilation and execution.

Mon Jul 24 18:52:55 2000  WATANABE Hirofumi  <eban@os.rim.or.jp>

	* win32/win32.c (win32_getenv): should remove `static'.

	* ruby.c (rubylib_mangle): support "/hoge;/foo"

Mon Jul 24 10:28:55 2000  GOTO Kentaro  <gotoken@math.sci.hokudai.ac.jp>

	* string.c (rb_str_count): raise exception if no argument is
	  given.

Sun Jul 23 12:55:04 2000  Dave Thomas  <Dave@Thomases.com>

	* string.c (rb_str_rindex): Support negative end position.

Fri Jul 21 17:35:01 2000  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* process.c (proc_getpriority): getpriority(2) may return valid
	  negative number.  use errno to detect error.

Sat Jul 15 01:32:34 2000  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* eval.c (Init_eval): should prohibit `include' and
	  `module_function' for class Class.  The latter was very
	  dangerous.

Fri Jul 14 12:49:50 2000  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* io.c (argf_eof): need to check stdin, when next_p == -1.

	* io.c (read_all): use io_fread() instead of fread(3).

	* io.c (io_reopen): should clearerr FILE if fd < 3.
