@@ -1,4 +1,4 @@
 #define RUBY_VERSION "1.4.6"
-#define RUBY_RELEASE_DATE "2000-08-01"
+#define RUBY_RELEASE_DATE "2000-08-09"
 #define RUBY_VERSION_CODE 146
-#define RUBY_RELEASE_CODE 20000801
+#define RUBY_RELEASE_CODE 20000809
